--- a/frontend/src/components/Signup.module.css
+++ b/frontend/src/components/Signup.module.css
@@ -3,27 +3,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
   justify-content: center;
-  background: var(--bg);
 }
-.formGroup {
-  margin-bottom: 15px;
-}
-.input {
+input {
+  margin: 10px;
   padding: 8px;
   width: 200px;
   border: 1px solid var(--border);
   border-radius: 4px;
 }
-.error {
-  color: #ff4d4f;
+.message {
+  color: #ec2323
 }
-.success {
-  color: #0f6848;
-}
-.registerButton {
-  padding: 10px;
+button {
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  padding: 8px;
   background: var(--nwu-turquoise);
   color: white;
   border: none;
